<resources>
    <string name="app_name">AtomicOrbital</string>
    <string name="start">START</string>

    <string name="client_id">239790895284-g1gmgmll3pimc5b37f8k1f6ogbjn0690.apps.googleusercontent.com</string>
    <string name="normal_leaderboard">CgkItOGapf0GEAIQAQ</string>
    <string name="harcore_leaderboard">CgkItOGapf0GEAIQAg</string>
    <string name="games_played_leaderboard">CgkItOGapf0GEAIQAw</string>

    <string name="want_google_game">googlegame</string>

    <!-- String für Views-->
    <string name="rate">RATE</string>
    <string name="score">Score: 0</string>
    <string name="highscore">highscore</string>
    <string name="hardcorehighscore">hardcorehighscore</string>
    <string name="home">HOME</string>
    <string name="restart">RESTART</string>
    <string name="mute">MUTE</string>
    <string name="unmute">UNMUTE</string>
    <string name="gameover">GAME OVER</string>
    <string name="skins">COMING SOON</string>
    <string name="likeText">LIKE</string>
    <string name="noAdsText">NO ADS</string>
    <string name="loginText">LOGIN</string>
    <string name="achievementText">ACHIEVEMENTS</string>
    <string name="scoreText">SCORE</string>
    <string name="shareText">SHARE</string>

    <!-- Content Description -->
    <string name="shadowScore">shadowScore</string>
    <string name="rateImage">rateImage</string>
    <string name="homeImage">homeImage</string>
    <string name="muteImage">muteImage</string>
    <string name="restartImage">restartImage</string>
    <string name="skinImage">skinImage</string>
    <string name="noAdsImage">NOADSIMAGE</string>
    <string name="likeImage">LIKEIMAGE</string>
    <string name="scoreImage">Score Image</string>
    <string name="shareImage">ShareImage</string>


    <!-- Error -->
    <string name="signin_other_error">Problem while signing in</string>
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="score_label">%1$s - Me</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>

    <!-- String SharedPreferences -->
    <string name="games_played">gamesPlayed</string>
    <string name="first_score_saved">firstScore</string>
    <string name="google_game_first_start">firstStart</string>
    <string name="total_points">TotalPoints</string>

    <!--Toast Info -->
    <string name="not_logged_in">You have to login into Google Play Games</string>
    <string name="couldnt_log_in">Couldnt login into Google Play Games</string>
</resources>
